添加几个swagger的api注释
