# controller/co/paging_model.go
@@ -1,0 +1,6 @@
+package co
+
+type PageLimitOffset struct {
+	Page int `json:"page" example:"1"`
+	Size int `json:"size" example:"100"`
+}
