# controller/co/task_name.go
@@ -1,0 +1,5 @@
+package co
+
+type TaskName struct {
+	JobName string `json:"job_name" example:"sign_baidu_tieba"`
+}
