# controller/cron_task_controller.go
@@ -15,8 +15,9 @@ var CronTaskController = cronTaskController{}
 
 // @Summary 定时任务触发器
 // @Produce json
-// @Param job_name query string true "job_name" Enums(sign_baidu_tieba, not_exist)
-// @Router /trigger/cron [get]
+// @Accept json
+// @Param job_name body co.TaskName true "job name"
+// @Router /trigger/cron [post]
 // @Failure 200 {object} service.Response
 // @Success 200 {object} service.Response
 func (this *cronTaskController) TriggerTask(c *gin.Context) {
