# controller/thinking_controller.go
@@ -2,7 +2,7 @@ package controller
 
 import (
 	"cgin/controller/context_helper"
-	"fmt"
+	"cgin/service"
 	"github.com/gin-gonic/gin"
 )
 
@@ -14,17 +14,22 @@ func (t *thinkController) GetOne(ctx *gin.Context) {
 
 }
 
+// @Summary 值得深思的句子
+// @Accept json
+// @Produce json
+// @Router /thinking/list [post]
+// @Success 200 {object} service.Response
+// @Param paging body co.PageLimitOffset true "page size"
 func (t *thinkController) GetList(ctx *gin.Context) {
 	helper := context_helper.New(ctx)
 	page := helper.GetInt("page")
 	size := helper.GetInt("size")
-	fmt.Println("===>", page, size)
 	if page < 1 {
 		page = 1
 	}
 	if size <= 0 {
 		size = 10
 	}
-	//results := service.ThinkingService.GetList(page, size)
-	helper.Response(fmt.Sprintf("page: %d, size: %d", page, size))
+	results := service.ThinkingService.GetList(page, size)
+	helper.Response(results)
 }
